feat: quering nodes & edges
